# paris_orderbike

./: .gitignore  .pre-commit-config.yaml  TEMPLATE.md  pyproject.toml
data/processed/: auc_table_growth.json  bikenet_edges.gpkg  bikenet_nodes.gpkg  pes_cleaned.gpkg  pes_filtered.gpkg
data/processed/2021/: auc_table_growth.json
data/processed/2026/: auc_table_growth.json
data/processed/Nothing/: auc_table_growth.json
notebooks/: sandbox.ipynb
scripts/: A_extract_paris_OSM.py  B_process_joined_pes.py  B_simplify_paris_OSM.py  C_match_maps.py  D_match_maps.py  E_join_maps.py  F_create_paris_bikenet.py  G_grow_bikenet.py  G_grow_paris.py  H_compute_real_growth_bikenet.py  H_compute_real_growth_paris.py  H_grow_linear_real_bikenet.py  I_grow_random_real_bikenet.py  I_plot_lineplot.json  I_plot_lineplot.py  J_compute_AUC.py  J_plot_hedgehog.json  J_plot_hedgehog.py  J_plot_lineplot.json  J_plot_lineplot.py  J_plot_lineplot_hierarchy.json  J_plot_lineplot_hierarchy.py  K_compute_AUC.py  K_plot_AUC.json  K_plot_AUC.py  K_plot_hedgehog.json  K_plot_hedgehog.py  L_compute_AUC.py  L_plot_AUC.json  L_plot_AUC.py  L_plot_bikenet_growths.py  L_plot_growths.py  M_plot_AUC.json  M_plot_AUC.py  M_plot_bikenet_growths.py  Ma_plot_AUC.py  Mb_plot_AUC_multiple.py  N_plot_bikenet_growths.py  N_plot_bikenet_single_map.py  O_plot_bikenet_multiple_map.py  (+3 more)
src/paris_orderbike/: growth.py  map_match.py  metrics.py  plot.py  utils.py
