[project]
authors = [{name = "Clement Sebastiao", email = "clement.sebastiao@gmail.com"}]
dependencies = []
name = "paris_orderbike"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
paris_orderbike = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
osmnx = ">=2.1.0,<3"
python-igraph = ">=1.0.0,<2"
haversine = ">=2.9.0,<3"
momepy = ">=0.11.0,<0.12"
jupyter = ">=1.1.1,<2"
city2graph = ">=0.3.1,<0.4"
pre-commit = ">=4.6.0,<5"
neatnet = ">=0.1.6,<0.2"
